Fix : dropdown product on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -716,7 +716,23 @@ svg {
 }
 
 .ant-menu-sub.ant-menu-inline {
-  margin-left: -21px;
+  margin-left: -18px;
+}
+
+.ant-menu-item .ant-menu-item-icon + span,
+.ant-menu-submenu-title .ant-menu-item-icon + span,
+.ant-menu-item .anticon + span,
+.ant-menu-submenu-title .anticon + span {
+  margin-left: 3px !important;
+}
+
+.ant-menu-sub.ant-menu-inline > .ant-menu-item,
+.ant-menu-sub.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+  height: 36px !important ;
+}
+
+ul li .ant-menu-item {
+  height: 40px;
 }
 
 .ant-menu-title-content {
@@ -725,7 +741,7 @@ svg {
 
 .ant-menu-item {
   font-size: 16px;
-  display: block;
+  margin-left: -9px;
 }
 
 @media only screen and (min-device-width: 1280px) and (max-device-height: 619px) {
